apps/mautrix/signal/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-signal
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: mautrix-signal
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - matrix-signal
