apps/mautrix/signal/overlays/nishir-tailnet/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-signal
  annotations:
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
